turning in day 11!

--- a/day11_reading_journal.ipynb
+++ b/day11_reading_journal.ipynb
@@ -69,13 +69,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 1"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "party begins at 03:45 and ends at 06:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Time(object):\n",
+    "    def __init__(self, hour=0,minute=0,second=0):\n",
+    "        self.hour=hour\n",
+    "        self.minute=minute\n",
+    "        self.second=second\n",
+    "    def __str__(self):\n",
+    "        if self.second == 0:\n",
+    "            s = (\"%.2d:%.2d\") % (self.hour,self.minute)\n",
+    "        else:\n",
+    "            s = (\"%.2d:%.2d:%.2d\") % (self.hour,self.minute,self.second)\n",
+    "        return s\n",
+    "\n",
+    "class Event(object):\n",
+    "    def __init__(self,name,start,end):\n",
+    "        self.name = name\n",
+    "        self.start = start\n",
+    "        self.end = end\n",
+    "    def __str__(self):\n",
+    "        s= (\"%s begins at %s and ends at %s\") % (self.name, self.start, self.end)\n",
+    "        return s\n",
+    "\n",
+    "starttime= Time(3,45,0)\n",
+    "endtime = Time(6)\n",
+    "\n",
+    "event = Event(\"party\", starttime,endtime)\n",
+    "print event"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -91,13 +126,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 2"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "party begins at 07:45 and ends at 06:00\n",
+      "-105\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Time(object):\n",
+    "    def __init__(self, hour=0,minute=0,second=0):\n",
+    "        self.hour=hour\n",
+    "        self.minute=minute\n",
+    "        self.second=second\n",
+    "    def __str__(self):\n",
+    "        if self.second == 0:\n",
+    "            s = (\"%.2d:%.2d\") % (self.hour,self.minute)\n",
+    "        else:\n",
+    "            s = (\"%.2d:%.2d:%.2d\") % (self.hour,self.minute,self.second)\n",
+    "        return s\n",
+    "\n",
+    "class Event(object):\n",
+    "    def __init__(self,name,start,end):\n",
+    "        self.name = name\n",
+    "        self.start = start\n",
+    "        self.end = end\n",
+    "    def __str__(self):\n",
+    "        s= (\"%s begins at %s and ends at %s\") % (self.name, self.start, self.end)\n",
+    "        return s\n",
+    "    def duration(self):\n",
+    "        start = self.start\n",
+    "        end = self.end\n",
+    "        starthr= start.hour\n",
+    "        startmin=start.minute\n",
+    "        endhr=end.hour\n",
+    "        endmin=end.minute\n",
+    "        diffhr= endhr - starthr\n",
+    "        diffmin = endmin-startmin\n",
+    "        duration = (diffhr * 60) + diffmin\n",
+    "        return duration\n",
+    "\n",
+    "starttime= Time(7,45,0)\n",
+    "endtime = Time(6)\n",
+    "\n",
+    "event = Event(\"party\", starttime,endtime)\n",
+    "print event\n",
+    "print event.duration()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -119,13 +202,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "solution": "Exercise 3"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Today's events are:   brunch with Elenore- begins at 12:45 and ends at 15:15      fancy dinner- begins at 16:30 and ends at 19:30      party at mansion- begins at 20:45 and ends at 24:00   \""
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Time(object):\n",
+    "    def __init__(self, hour=0,minute=0,second=0):\n",
+    "        self.hour=hour\n",
+    "        self.minute=minute\n",
+    "        self.second=second\n",
+    "    def __str__(self):\n",
+    "        if self.second == 0:\n",
+    "            s = (\"%.2d:%.2d\") % (self.hour,self.minute)\n",
+    "        else:\n",
+    "            s = (\"%.2d:%.2d:%.2d\") % (self.hour,self.minute,self.second)\n",
+    "        return s\n",
+    "\n",
+    "class Event(object):\n",
+    "    def __init__(self,name,start,end):\n",
+    "        self.name = name\n",
+    "        self.start = start\n",
+    "        self.end = end\n",
+    "    def __str__(self):\n",
+    "        s= (\"   %s- begins at %s and ends at %s   \") % (self.name, self.start, self.end)\n",
+    "        return s\n",
+    "    def duration(self):\n",
+    "        start = self.start\n",
+    "        end = self.end\n",
+    "        starthr= start.hour\n",
+    "        startmin=start.minute\n",
+    "        endhr=end.hour\n",
+    "        endmin=end.minute\n",
+    "        diffhr= endhr - starthr\n",
+    "        diffmin = endmin-startmin\n",
+    "        duration = (diffhr * 60) + diffmin\n",
+    "        return duration\n",
+    "\n",
+    "class Agenda(object):\n",
+    "    def __init__(self,events=[]):\n",
+    "        self.events=events\n",
+    "    def __str__(self):\n",
+    "        s = (\"Today's events are:\")\n",
+    "        for x in range (len(self.events)):\n",
+    "            s = s + str(self.events[x])\n",
+    "        return s\n",
+    "    def add_event(self,event):\n",
+    "        events = self.events\n",
+    "        events+=[event]\n",
+    "        return events\n",
+    "    def print_agenda(self):\n",
+    "        startminutes = {}\n",
+    "        for x in range(len(self.events)):\n",
+    "            events=self.events\n",
+    "            event=events[x]\n",
+    "            start=event.start\n",
+    "            hr=start.hour\n",
+    "            mi=start.minute\n",
+    "            startminutes[event]= 60*hr + mi\n",
+    "        a= sorted(startminutes,key=startminutes.get,reverse=False)\n",
+    "        s = \"Today's events are:\"\n",
+    "        for x in range (len(a)):\n",
+    "            s = (s + \n",
+    "                str(a[x]) )\n",
+    "        return s\n",
+    "            \n",
+    "starttime= Time(20,45,0)\n",
+    "endtime = Time(24)\n",
+    "start1=Time(16,30)\n",
+    "end1=Time(19,30)\n",
+    "start2=Time(12,45)\n",
+    "end2=Time(15,15)\n",
+    "event = Event(\"party at mansion\", starttime,endtime)\n",
+    "event1= Event(\"fancy dinner\",start1,end1)\n",
+    "event2= Event(\"brunch with Elenore\",start2,end2)\n",
+    "\n",
+    "fancy=Agenda()\n",
+    "fancy.add_event(event)\n",
+    "fancy.add_event(event1)\n",
+    "fancy.add_event(event2)\n",
+    "fancy.print_agenda()\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -171,7 +341,7 @@
     "solution": "Time spent"
    },
    "source": [
-    " "
+    "about 2 hour "
    ]
   },
   {
